Fixed sidebar overflow

--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -212,6 +212,7 @@ textarea.form-control {
   max-height: 70vh;
 }
 
+
 .product-detail-image img {
   max-height: 70vh;
   width: 100%;
@@ -382,6 +383,9 @@ a, a:hover {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+.overflow-y-auto{
+  overflow-y: auto;
 }
 
 body * {
